--- a/templates/graph.html
+++ b/templates/graph.html
@@ -9,6 +9,7 @@
 <body>
     <h1>Anxiety, Depression, and Stress Over Time</h1>
     <button onclick="window.location.href='/'">Go Home</button>
+    <button onclick="window.location.href='/analys'">Analysis</button>
     <canvas id="myChart" width="400" height="200"></canvas>
 
     <script>
